@@ -30,6 +30,7 @@ rather than sorted alphabetically.
 
 New Features for 3.14
 =====================
+[2004500] CTRL-A now selects all of the Notes field in Add & Edit.
 [] The entries displayed can now be filtered based on rules on every
 field in the database.
 
